Hide scroll bar, that will fix jumping layout on open/close chart modal

--- a/assets/styles/view/_chart.scss
+++ b/assets/styles/view/_chart.scss
@@ -1,3 +1,15 @@
+.ngdialog {
+	position: fixed;
+	overflow: hidden;
+	z-index: 10;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;
+}
+
 .chart {
 	&-header {
 		padding: 10px;
